--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,8 @@
+Changes from v0.6 to v0.7
+- Added method to return vcards with given FN substring
+- Added support for Google
+- Now always sending 'Depth' header
+
 Changes from v0.5.2 to v0.6
 - Added Exception handling
 - Each method now analyzes the http status code on it's own
